--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,24 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
+            },
+            "local": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -76,6 +93,9 @@
             },
             "development": {
               "buildTarget": "useless-facts-app-zain:build:development"
+            },
+            "local": {
+              "buildTarget": "useless-facts-app-zain:build:local"
             }
           },
           "defaultConfiguration": "development"
