chore: Complete application dockerizaton.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,41 +1,13 @@
-# nginx/nginx.conf
+# This is the Nginx configuration file for serving an Angular application
 
-worker_processes 1;
+server {
+  listen 80; # Nginx listens on port 80 inside the container
 
-events {
-  worker_connections 1024;
-}
+  # Set the root directory for serving files to where our Angular app will be
+  root /usr/share/nginx/html;
 
-http {
-  include mime.types;
-  default_type application/octet-stream;
-
-  sendfile on;
-  keepalive_timeout 65;
-
-  server {
-    listen 80; # Nginx listens on port 80 inside the container
-
-    # Set the root directory for serving files to where our Angular app will be
-    root /usr/share/nginx/html;
-
-    # Serve index.html for all requests to enable Angular routing
-    location / {
-      try_files $uri $uri/ /index.html;
-    }
-
-    # Handle API calls, proxy to the actual API if needed
-    # For this project, the API is external, so we don't proxy from Nginx.
-    # If your Angular app made requests to a /api endpoint on the same host,
-    # you would configure a proxy here.
-    #
-    # location /api/ {
-    #   proxy_pass http://your.backend.service;
-    #   proxy_http_version 1.1;
-    #   proxy_set_header Upgrade $http_upgrade;
-    #   proxy_set_header Connection 'upgrade';
-    #   proxy_set_header Host $host;
-    #   proxy_cache_bypass $http_upgrade;
-    # }
+  # Serve index.html for all requests to enable Angular routing
+  location / {
+    try_files $uri $uri/ /index.html;
   }
 }
