chore: Install Github pages.

--- a/angular.json
+++ b/angular.json
@@ -155,6 +155,9 @@
               "devServerTarget": "useless-facts-app-zain:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
