--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,8 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/useless-facts-app-zain/"
             },
             "development": {
               "optimization": false,
