chore: Fix docker setup.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,30 @@
-# This is the Nginx configuration file for serving an Angular application
+# nginx/nginx.conf - Final, Robust Configuration for SPA with baseHref
 
 server {
   listen 80; # Nginx listens on port 80 inside the container
 
-  # Set the root directory for serving files to where our Angular app will be
+  # Set the main root directory where your Angular app's files are physically located.
+  # This is where your index.html, main.js, etc., actually reside after Docker COPY.
   root /usr/share/nginx/html;
 
-  # Serve index.html for all requests to enable Angular routing
+  # Ensure Nginx knows common MIME types for files it serves.
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream; # Fallback for unknown types
+
+  # Location block to handle requests for your application's baseHref path.
+  # This is crucial for GitHub Pages deployments (e.g., /your-repo-name/).
+  location /useless-facts-app-zain/ {
+    # The 'alias' directive is key here: it tells Nginx to internally rewrite the path.
+    # For a request like /useless-facts-app-zain/main.js, Nginx will look for /usr/share/nginx/html/main.js.
+    alias /usr/share/nginx/html/;
+    # This part ensures that if a file (like main.js) isn't found, it falls back to index.html
+    # for client-side routing.
+    try_files $uri $uri/ /index.html;
+  }
+
+  # Default location block: handles requests that don't match the specific baseHref location.
+  # This is generally for direct access to the root or any other files.
+  # For GitHub Pages, most traffic will hit the /useless-facts-app-zain/ location above.
   location / {
     try_files $uri $uri/ /index.html;
   }
